[metadata]
name = vstf
version = 2014.2.3
summary = Open Virtual Switch Test Framework
description-file = 
	README.rst
author = OpenNFV
author-email = openatf@huawei.com
home-page = https://12.234.32.89/mediawiki/
classifier = 
	Environment :: OpenATF
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 2.6

[files]
packages = 
	vstf
data_files = 
    etc/vstf/=
    etc/vstf/amqp=
    etc/vstf/amqp/amqp.ini
[global]
setup-hooks = 
	pbr.hooks.setup_hook

[entry_points]
console_scripts = 
    vstf-manager  = vstf.controller.api_server:main
    vstf-agent    = vstf.agent.agent:main
    vstfadm       = vstf.controller.vstfadm:main
    vstf-settings = vstf.controller.settings.settings_input:main
    vstf-driver   = vstf.controller.functiontest.driver.drivertest:main
    vstf-switch   = vstf.controller.functiontest.switch.switchtest:main

agent.plugins = 
    soft = vstf.agent.softagent:softAgent
    spirent = vstf.agent.spirentagent:spirentAgent


spirent.model.plugins = 
    Tnv = vstf.spirent.common.model:Tnv_Model
    
perf.plugins = 
    spirent = vstf.controller.spirent.appliance:spirentSTC

vswitch.plugins =
	ovs = vstf.agent.env.vswitch_plugins.ovs_plugin:OvsPlugin
	bridge = vstf.agent.env.vswitch_plugins.bridge_plugin:BridgePlugin

drivers.plugins = 
	origin = vstf.agent.env.driver_plugins.origin_driver:OriginDriverPlugin

env_build.plugins =
	libvirt =  vstf.agent.env.plugins.libvirt_plugin:Plugin
	transmitter =  vstf.agent.env.plugins.tester_env_plugin:Plugin
[build_sphinx]
#all_files = 1
#build-dir = doc/build
#source-dir = doc/source

[extract_messages]

[compile_catalog]

[update_catalog]

[wheel]
universal = 1

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

